# platform-docs

./: .markdownlint.yaml  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs-test  docs.yaml
bruno/Event-Issuer-Examples/Produce/: Produce Tombstone Event.bru
bruno/Payload-Manager-Examples/: bruno.json
bruno/Payload-Manager-Examples/Blobs/: Create Blob.bru  Download blob.bru  Get blob metadata.bru
bruno/Payload-Manager-Examples/Containers/: List Container Content.bru  List Containers.bru
bruno/Payload-Manager-Examples/environments/: Dev APIM.bru  Prod APIM.bru  Test APIM.bru
docs/: .pages.yaml  CNAME  faq.md  index.md
docs/integration/: .pages.yaml
docs/integration/Event-Issuer/: .pages.yaml  index.md  terminology.md
docs/integration/Event-Issuer/Getting-Started/: .pages.yaml  index.md
docs/integration/Event-Issuer/User-Guides/: .pages.yaml  debugging.md  faq.md  getting-started.md  producing.md  subscriptions.md  tenants.md
docs/integration/Event-Issuer/apis/: v1.json  v1.md
docs/integration/Payload-Manager/: .pages.yaml  index.md
docs/integration/Payload-Manager/Getting-Started/: .pages.yaml  File-and-blob-restrictions.md  (+2 more)
docs/publications/: .pages.yaml  index.md
integration/Event-Issuer/: index.html
integration/Event-Issuer/Getting-Started/: index.html
integration/Event-Issuer/terminology/: index.html
integration/Payload-Manager/: index.html
integration/Payload-Manager/Getting-Started/: index.html
search/: search_index.json
(+26 files in other folders)
